--- a/package.json
+++ b/package.json
@@ -1,23 +1,58 @@
 {
   "name": "shorturl-slack",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A slack slash command server to shorten URLs using Rebrandly API",
+  "main": "src/server.js",
+  "engines": {
+    "node": ">=4.3.2"
+  },
   "license": "MIT",
+  "scripts": {
+    "start": "node src/server",
+    "test:lint": "eslint src tests",
+    "test:unit": "jest --verbose --coverage",
+    "test": "npm run test:lint && npm run test:unit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lmammino/slack-shorturl-integration.git"
+  },
+  "author": {
+    "name": "Luciano Mammino",
+    "email": "lucianomammino@gmail.com",
+    "url": "http://loige.co"
+  },
+  "bugs": {
+    "url": "https://github.com/lmammino/slack-shorturl-integration/issues"
+  },
+  "homepage": "https://github.com/lmammino/slack-shorturl-integration#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.46.0",
-    "flow-typed": "^2.1.2",
-    "jest": "^20.0.1"
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "jest": "^20.0.3"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "chalk": "^1.1.3",
-    "express": "^4.15.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "request-promise-native": "^1.0.4",
     "string-tokenizer": "^0.0.8",
     "url-regex": "^4.0.0"
-  }
+  },
+  "keywords": [
+    "URL",
+    "shortner",
+    "unshortner",
+    "expander",
+    "tall",
+    "link",
+    "expand link",
+    "expand url",
+    "promise",
+    "no depenencies",
+    "no dependency"
+  ]
 }
