--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js:
-  - "4"
-  - "5"
   - "6"
   - "7"
 after_script:
-  - ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  - ./node_modules/.bin/coveralls && rm -rf ./coverage
