Updated package tags

--- a/package.json
+++ b/package.json
@@ -47,14 +47,13 @@
   "keywords": [
     "URL",
     "shortner",
-    "unshortner",
-    "expander",
-    "tall",
-    "link",
-    "expand link",
-    "expand url",
-    "promise",
-    "no depenencies",
-    "no dependency"
+    "url shortner",
+    "rebrandly",
+    "slack",
+    "integration",
+    "web",
+    "server",
+    "utility",
+    "application"
   ]
 }
